# testing-rs

./: Cargo.toml  README.md
.github/workflows/: rsgx.yml  rust.yml
src/: lib.rs
src/tests/: mod.rs  should_panic.rs  sync.sh  tests.rs
tests/: testing.rs
tests/sgx/: .gitignore  CMakeLists.txt
tests/sgx/app/: CMakeLists.txt  Cargo.toml
tests/sgx/app/src/: main.rs
tests/sgx/cmake/: git.cmake  sgx.cmake
tests/sgx/enclave/: Cargo.toml  enclave.edl
tests/sgx/enclave/src/: lib.rs
