[package]
name = "testing"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sgx_tstd]
git = "https://github.com/apache/teaclave-sgx-sdk"
rev = "v1.1.1"

[features]
default = []
testing = []