[package]
name = "enclave"
version = "1.0.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]

[lib]
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_tstd  = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.1" }

[dependencies.wheel]
package = "testing"
path = "../../.."
features = ["testing"]
